# self-update-extras

./: AGENTS.md  Cargo.toml  README.md  build.rs  deny.toml  lefthook.yml
.cargo/: audit.toml
.github/workflows/: release.yml
.sentrux/: rules.toml
.zed/: settings.json
src/: lib.rs  restart.rs  throttle.rs
