[package]
name = "auto-update"
version = "0.1.0"
edition = "2024"
description = "Self-updating support for CLI binaries: GitHub release checks, throttle, guard, binary replacement and re-exec"
license = "Apache-2.0"
repository = "https://github.com/hyper-mcp-rs/auto-update"
readme = "README.md"
keywords = ["self-update", "updater", "cli", "release", "github"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
self_update = { version = "0.44", default-features = false, features = [
    "tar",
    "zip",
    "reqwest",
    "rustls",
] }
self-replace = "1.1"

[dev-dependencies]
filetime = "0.2"
serial_test = "2.0"
