[package]
name = "self-update-extras"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Joseph Wortmann <joseph.wortmann@gmail.com>"]
description = "Composable self-update helpers for CLI binaries: throttle and restart wrappers around any self_update ReleaseUpdate backend"
license = "Apache-2.0"
repository = "https://github.com/hyper-mcp-rs/self-update-extras"
homepage = "https://github.com/hyper-mcp-rs/self-update-extras"
documentation = "https://docs.rs/self-update-extras"
readme = "README.md"
keywords = ["self-update", "updater", "cli", "release", "github"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
self_update = { version = "0.44", default-features = false, features = [
    "tar",
    "zip",
    "reqwest",
    "rustls",
] }

[dev-dependencies]
filetime = "0.2"
serial_test = "3.5"

[package.metadata.release]
publish = true
push = true
tag = true
tag-name = "v{{version}}"
